--- a/test/fixtures/unique_pokemons.yml
+++ b/test/fixtures/unique_pokemons.yml
@@ -15,6 +15,8 @@ one:
   spa_iv: 1
   spd_iv: 1
   spe_iv: 1
+  user_id: 1
+  pokemon_id: 1
   
 two:
   nickname: MyString
@@ -31,3 +33,5 @@ two:
   spa_iv: 1
   spd_iv: 1
   spe_iv: 1
+  user_id: 1
+  pokemon_id: 1
