added has_many belongs_to relationship between Trainer and UniquePokemon. Added trainer_id to UniquePokemon. Modified unique_pokemons_controller create action. modified unique_pokemons jbuilder. Modified tests and yml files to follow these changes

--- a/test/fixtures/unique_pokemons.yml
+++ b/test/fixtures/unique_pokemons.yml
@@ -20,7 +20,8 @@ one:
   # user_id: 1
   # pokemon_id: 1
   user: one
-  pokemon: two
+  pokemon: one
+  trainer: one
   
 two:
   nickname: MyString2
@@ -43,3 +44,4 @@ two:
   # pokemon_id: 1
   user: two
   pokemon: two
+  trainer: two
