--- a/test/fixtures/trainers.yml
+++ b/test/fixtures/trainers.yml
@@ -5,9 +5,11 @@ one:
   title: MyString
   level: 1
   experience: 1
+  user: one
 
 two:
   name: MyString
   title: MyString
   level: 1
   experience: 1
+  user: two
